feat: :sparkles: Added Login Register and Forgot Password Sheet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <div style="font-size: 1.5em;" class="nav-bar-items">Bud Check</div>
         </div>
         <div id="nav-bar-right">
-            <div class="nav-bar-items">Login</div>
+            <div (click)="onLoginClick()" class="nav-bar-items">Login</div>
         </div>
     </div>
 </div>
