--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
                 <p>
                     Medicate Socially!
                 </p>
-                <button mat-flat-button color="warn">Get Started</button>
+                <button (click)="onGetStartedClick()" mat-flat-button color="warn">Get Started</button>
             </div>
         </div>
         <div></div>
