--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
         </div>
         <div id="nav-bar-right">
             <div *ngIf="!loggedIn()" (click)="onLoginClick()" class="nav-bar-items">Login</div>
-            <div *ngIf="loggedIn() && userHasProfile" class="nav-bar-items">Hello, {{userDocument.publicName}}</div>
+            <div *ngIf="userDocument != null && userDocument.publicName.length > 0 && loggedIn() && userHasProfile"
+                class="nav-bar-items">Hello, {{userDocument.publicName}}</div>
             <div *ngIf="loggedIn()" (click)="onLogoutClick()" class="nav-bar-items">Logout</div>
         </div>
     </div>
