--- a/src/app/tools/create-post/create-post.component.html
+++ b/src/app/tools/create-post/create-post.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>Create Post</mat-card-title>
     </mat-card-header>
     <div>
-        <textarea placeholder="Type Message..."></textarea>
+        <textarea #commentInput placeholder="Type Message..."></textarea>
     </div>
     <div *ngIf="selectedImageFile" id="post-preview">
         <img id="post-preview-image"/>
@@ -15,6 +15,6 @@
                 <mat-icon>insert_photo</mat-icon>
             </label>
         </button>
-        <button mat-button color="warn">Post</button>
+        <button (click)="onPostClick(commentInput)" mat-button color="warn">Post</button>
     </mat-card-actions>
 </mat-card>
