--- a/src/app/tools/post/post.component.html
+++ b/src/app/tools/post/post.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Name</mat-card-title>
-        <mat-card-subtitle>Description</mat-card-subtitle>
+        <mat-card-title>{{creatorName}}</mat-card-title>
+        <mat-card-subtitle>{{creatorDescription}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="{{postData?.imageUrl}}">
     <mat-card-content>{{postData?.comment}}</mat-card-content>
