--- a/src/app/tools/post/post.component.html
+++ b/src/app/tools/post/post.component.html
@@ -6,7 +6,7 @@
     <img mat-card-image src="{{postData?.imageUrl}}">
     <mat-card-content>{{postData?.comment}}</mat-card-content>
     <mat-card-actions>
-        <mat-icon class="action-item" color="warn">chat_bubble_outline</mat-icon>
+        <mat-icon (click)="onReplyClick()" class="action-item" color="warn">chat_bubble_outline</mat-icon>
         <mat-icon class="action-item" color="warn">favorite_border</mat-icon>
         <mat-icon class="action-item" color="warn">save</mat-icon>
     </mat-card-actions>
