--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <div id="nav-bar">
     <div id="nav-bar-content">
         <div id="nav-bar-left">
-            <div style="font-size: 1.5em;" class="nav-bar-items">Bud Check</div>
+            <div [ngStyle]="onWhitePage?{'color':'black'} : {'color': 'white'}" style="font-size: 1.5em;" class="nav-bar-items">Bud Check</div>
         </div>
         <div id="nav-bar-right">
-            <div *ngIf="!loggedIn()" (click)="onLoginClick()" class="nav-bar-items">Login</div>
+            <div *ngIf="!loggedIn()" [ngStyle]="onWhitePage?{'color':'black'} : {'color': 'white'}"
+                (click)="onLoginClick()" class="nav-bar-items">Login</div>
             <div *ngIf="isUserDocValid() && getUserName().length > 0 && loggedIn() && userHasProfile"
-                class="nav-bar-items">Hello, {{getUserName()}}</div>
-            <div *ngIf="loggedIn()" (click)="onLogoutClick()" class="nav-bar-items">Logout</div>
+                [ngStyle]="onWhitePage?{'color':'black'} : {'color': 'white'}" class="nav-bar-items">Hello,
+                {{getUserName()}}</div>
+            <div *ngIf="loggedIn()" [ngStyle]="onWhitePage?{'color':'black'} : {'color': 'white'}"
+                (click)="onLogoutClick()" class="nav-bar-items">Logout</div>
         </div>
     </div>
 </div>
