--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,35 +6,25 @@
 #home-page-landing {
     width: 100%;
     height: 100%;
-    background-image: url("src/assets/home_background.png");
-    background-size: cover;
-    background-position: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100%;
 }
 
-#landing-left {
-    display: flex;
-    color: white;
-    justify-content: center;
-    align-items: center;
+#landing-center {
+    height: 100%;
+    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-#landing-left-content {
-    text-align: right;
-    padding: 1em 1em 1em 3em;
+#landing-center-content button {
+    width: 150px;
+    height: 50px;
 }
 
-#landing-left-content h1 {
-    font-size: 5em;
-}
-
-#landing-left-content p {
-    font-size: 3em;
-}
-
-#landing-left-content button {
-    font-size: 2em;
-    padding: .5em;
-}
+.puffed-logo {
+    width: 150px;
+    height: 150px;
+    padding-top: 80px;
+    fill: currentColor;
+  }
