--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<mat-drawer-container>
-    <mat-drawer mode="side" opened="true">
-        <app-side-nav></app-side-nav>
-    </mat-drawer>
-    <mat-drawer-content>
-        <app-header></app-header>
-        <router-outlet></router-outlet>
-    </mat-drawer-content>
-</mat-drawer-container>
+<h1>App Works!</h1>
