--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html,
 body {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  width: 100%;
   height: 100%;
 }
