feat: :sparkles: Working Register Login

--- a/src/app/pages/sign-in/sign-in.component.scss
+++ b/src/app/pages/sign-in/sign-in.component.scss
@@ -20,5 +20,13 @@
 }
 
 .btn-redirectToLogin {
-  color: Black !important;
+  color: black !important;
+}
+
+.puffed-logo {
+  text-align: center;
+}
+
+svg {
+  width: 64px;
 }
