--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -1,3 +1,3 @@
 <div id="activity-feed">
-    <app-product *ngFor="let product of products" [productPayLoad]='product'></app-product>
+    <app-product *ngFor="let product of products" [productDoc]='product.payload.doc'></app-product>
 </div>
