--- a/src/app/tools/product/product.component.html
+++ b/src/app/tools/product/product.component.html
@@ -3,6 +3,6 @@
     <div class="card-body">
         <h5 class="card-title">{{productData.displayName}}</h5>
         <p class="card-text">{{productData.description}}</p>
-        <app-star-review [productId]="productId" [userId]="userId"></app-star-review>
+        <app-star-review [productId]="productId"></app-star-review>
     </div>
 </div>
