feat: :sparkles: Global Activity Updated

--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div class="row">
-        <app-activity-rating *ngFor="let rating of ratings" [ratingDoc]="rating"></app-activity-rating>
+        <app-activity-rating *ngFor="let ratingDoc of ratingsDocs" [ratingDoc]="ratingDoc"></app-activity-rating>
     </div>
 </div>
