feat: :sparkles: Create Product

--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -1,5 +1,5 @@
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 px-lg-5 my-5 overflow-hidden mh-100">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6">
                 <img class="card-img-top mb-5 mb-md-0" [src]="productData?.imageURL" />
@@ -14,7 +14,7 @@
                     <div class="bi-star-fill"></div>
                     <div class="bi-star-fill"></div>
                 </div>
-                <p class="lead">{{productData?.description}}</p>
+                <p class="lead" style="max-height: 250px; overflow-y: hidden;">{{productData?.description}}</p>
                 <div class="d-flex">
                     <div class="card-footer">
                         <p class="m-0">THC: {{productData?.thc}} | CBD: {{productData?.cbd}}</p>
