--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -10,9 +10,9 @@
         <li class="nav-item"><a class="nav-link" href="/activity">Activity</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">Shop</a>
+            aria-expanded="false">Create</a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#!">All Products</a></li>
+            <li><a class="dropdown-item" href="/createproduct">Create Product</a></li>
             <li>
               <hr class="dropdown-divider" />
             </li>
