feat: :sparkles: Product Feed

--- a/src/app/tools/activity/activity-item/activity-item.component.html
+++ b/src/app/tools/activity/activity-item/activity-item.component.html
@@ -22,6 +22,6 @@
     <!-- Product actions-->
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
         <div class="text-center"><a class="btn btn-outline-dark mt-auto"
-                [routerLink]="['/product', 'EzMrOgxdH4lhB2GaDbac']">View options</a></div>
+                [routerLink]="['/product', 'EzMrOgxdH4lhB2GaDbac']">View product</a></div>
     </div>
 </div>
