--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5" style="max-width: 600px">
-    <div class="row" *ngIf="authService.userState as user">
+    <div class="row">
         <div class="media">
-            <img class="align-self-start mr-5 img-thumbnail rounded-circle"
-                src="{{(user.photoURL) ? user.photoURL : '/assets/dummy.jpg'}}" alt="{{user.displayName}}">
+            <img class="align-self-start mr-5 img-thumbnail rounded-circle" src="{{user?.photoURL}}"
+                alt="{{user?.displayName}}">
             <div class="media-body">
-                <h2>Hi: <strong>{{(user.displayName) ? user.displayName : 'User'}}</strong></h2>
-                <p>User ID: <strong>{{user.uid}}</strong></p>
-                <p>Email: <strong>{{user.email}}</strong></p>
+                <h2>Hi: <strong>{{user?.displayName}}</strong></h2>
+                <p>User ID: <strong>{{user?.uid}}</strong></p>
+                <p>Email: <strong>{{user?.email}}</strong></p>
             </div>
         </div>
     </div>
