--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -35,7 +35,7 @@
                 <hr class="my-4">
                 <div class="d-grid mb-2">
                   <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-                    <i class="bi bi-google me-2"></i> Sign up with Google
+                    <i class="bi bi-google me-2"></i> Sign in with Google
                   </button>
                 </div>
               </form>
