--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,46 +1,75 @@
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card border-0 shadow rounded-3 my-5">
-          <div class="card-body p-4 p-sm-5">
-              <h5 class="card-title text-center mb-5 fw-light fs-5">Login</h5>
-  
-              <form [formGroup]="loginForm" (ngSubmit)="login()">
-                <div class="form-floating mb-3">
-                  <input formControlName="email" type="email" class="form-control" id="email"
-                    placeholder="name@example.com" required>
-                  <label for="email">Email address</label>
-                </div>
-                <div *ngIf="email.invalid && email.dirty" class="alert alert-danger" role="alert">
-                  Your email doesn't look quite right...
-                </div>
-  
-                <hr>
-  
-                <div class="form-floating mb-3">
-                  <input formControlName="password" type="password" class="form-control" id="password"
-                    placeholder="Password">
-                  <label for="password">Password</label>
-                  <div *ngIf="password.invalid && password.touched" class="alert alert-danger" role="alert">
-                    Password must be between 6 and 24 chars and have at least one number
-                  </div>
-                </div>
-  
-                <div class="d-grid">
-                  <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit"
-                    [disabled]="!loginForm.valid">Login</button>
-                </div>
-                <a class="d-block text-center mt-2 small" href="#">Don't have an account? Sign Up!</a>
-  
-                <hr class="my-4">
-                <div class="d-grid mb-2">
-                  <button class="btn btn-google btn-login text-uppercase fw-bold" type="submit">
-                    <i class="bi bi-google me-2"></i> Sign in with Google
-                  </button>
-                </div>
-              </form>
-          </div>
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card border-0 shadow rounded-3 my-5">
+        <div class="card-body p-4 p-sm-5">
+          <h5 class="card-title text-center mb-5 fw-light fs-5">Login</h5>
+
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
+            <div class="form-floating mb-3">
+              <input
+                formControlName="email"
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="name@example.com"
+                required
+              />
+              <label for="email">Email address</label>
+            </div>
+            <div
+              *ngIf="email.invalid && email.dirty"
+              class="alert alert-danger"
+              role="alert"
+            >
+              Your email doesn't look quite right...
+            </div>
+
+            <div class="form-floating mb-3">
+              <input
+                formControlName="password"
+                type="password"
+                class="form-control"
+                id="password"
+                placeholder="Password"
+                required
+              />
+              <label for="password">Password</label>
+              <div
+                *ngIf="password.invalid && password.touched"
+                class="alert alert-danger"
+                role="alert"
+              >
+                Password must be between 6 and 24 chars and have at least one
+                number
+              </div>
+            </div>
+
+            <div class="d-grid">
+              <button
+                class="btn btn-primary btn-login text-uppercase fw-bold"
+                type="submit"
+                [disabled]="!loginForm.valid"
+              >
+                Login
+              </button>
+            </div>
+            <a class="d-block text-center mt-2 small" href="/register"
+              >Don't have an account? Sign Up!</a
+            >
+
+            <hr class="my-4" />
+            <div class="d-grid mb-2">
+              <button
+                class="btn btn-google btn-login text-uppercase fw-bold"
+                type="submit"
+              >
+                <i class="bi bi-google me-2"></i> Sign in with Google
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
