--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -1,44 +1,105 @@
-<div class="wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                <div class="card border-0 shadow rounded-3 my-5">
-                    <div class="card-body p-4 p-sm-4">
-                        <h5 class="card-title text-center mb-5 fw-light fs-5">Register</h5>
-                        <form onsubmit="return false">
-                            <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="floatingInput"
-                                    placeholder="name@example.com" #email required>
-                                <label for="floatingInput">Email address</label>
-                            </div>
-                            <div class="form-floating mb-3">
-                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
-                                    #password required>
-                                <label for="floatingPassword">Password</label>
-                            </div>
-                            <div class="d-grid">
-                                <button class="btn btn-primary btn-login text-uppercase fw-bold"
-                                    (click)="authService.signUpWithEmailAndPassword(email.value, password.value)">Sign
-                                    Up</button>
-                            </div>
-                            <hr class="my-4">
-                            <div class="d-grid mb-2">
-                                <button class="btn btn-google btn-login text-uppercase fw-bold"
-                                    (click)="authService.signInWithGoogle()">
-                                    <i class="fab fa-google me-2"></i> Continue with Google
-                                </button>
-                            </div>
-                        </form>
-                        <hr class="my-4">
-                        <div class="d-grid mb-2">
-                            <button class="btn btn-redirectToLogin btn-login text-uppercase fw-bold"
-                                routerLink="/sign-in">
-                                <i class="fab fa-google me-2"></i>Already have an account?
-                            </button>
-                        </div>
-                    </div>
-                </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card border-0 shadow rounded-3 my-5">
+        <div class="card-body p-4 p-sm-5">
+          <h5 class="card-title text-center mb-5 fw-light fs-5">Register</h5>
+
+          <form [formGroup]="registerForm" (ngSubmit)="register()">
+            <div class="form-floating mb-3">
+              <input
+                formControlName="username"
+                type="text"
+                class="form-control"
+                required
+              />
+              <label for="username">User Name</label>
             </div>
+            <div
+              *ngIf="username.invalid && username.dirty"
+              class="alert alert-danger"
+              role="alert"
+            >
+              Username must be between 3 and 24 chars
+            </div>
+
+            <div class="form-floating mb-3">
+              <input
+                formControlName="email"
+                type="email"
+                class="form-control"
+                required
+              />
+              <label for="email">Email address</label>
+            </div>
+            <div
+              *ngIf="email.invalid && email.dirty"
+              class="alert alert-danger"
+              role="alert"
+            >
+              Your email doesn't look quite right...
+            </div>
+
+            <div class="form-floating mb-3">
+              <input
+                formControlName="password"
+                type="password"
+                class="form-control"
+                required
+              />
+              <label for="password">Password</label>
+              <div
+                *ngIf="password.invalid && password.touched"
+                class="alert alert-danger"
+                role="alert"
+              >
+                Password must be between 6 and 24 chars and have at least one
+                number
+              </div>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                formControlName="confirmPassword"
+                type="password"
+                class="form-control"
+                required
+              />
+              <label for="confirmPassword">Confirm Password</label>
+              <div
+                *ngIf="confirmPassword.invalid && confirmPassword.touched"
+                class="alert alert-danger"
+                role="alert"
+                required
+              >
+                Password and Confirm Password must be match.
+              </div>
+            </div>
+
+            <div class="d-grid">
+              <button
+                class="btn btn-primary btn-register text-uppercase fw-bold"
+                type="submit"
+                [disabled]="!registerForm.valid"
+              >
+                Register
+              </button>
+            </div>
+            <a class="d-block text-center mt-2 small" href="/login"
+              >Already have an account? Sign In!</a
+            >
+
+            <hr class="my-4" />
+            <div class="d-grid mb-2">
+              <button
+                class="btn btn-google btn-register text-uppercase fw-bold"
+                type="submit"
+              >
+                <i class="bi bi-google me-2"></i> Sign up with Google
+              </button>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 </div>
