feat: :sparkles: Rating System In
Alot of Visual Bugs

--- a/src/app/core/product/product-page/product-page.component.html
+++ b/src/app/core/product/product-page/product-page.component.html
@@ -21,7 +21,7 @@
                         <p class="m-0">{{productRatings?.length}} Ratings</p>
                     </div>
                     <div>
-                        <app-product-checkin></app-product-checkin>
+                        <app-rating-checkin [productId]="productId"></app-rating-checkin>
                     </div>
                 </div>
             </div>
