--- a/src/app/core/product/product-feed/product-feed.component.html
+++ b/src/app/core/product/product-feed/product-feed.component.html
@@ -1,24 +1,11 @@
-<header class="py-5">
-  <div class="container">
-    <div class="text-center">
-      <h1 class="display-4 fw-bolder border-bottom border-2">All Products</h1>
+<div class="container">
+  <h1 class="text-center my-4 display-4 fw-bolder border-bottom border-2">
+    All Products
+  </h1>
+
+  <div class="row">
+    <div *ngFor="let productDoc of productsDocs" class="col-lg-3 col-md-4 col-sm-6 mb-4">
+      <app-product-item [productDoc]="productDoc"></app-product-item>
     </div>
   </div>
-</header>
-<section class="py-5">
-  <div class="container px-4 px-lg-5 mt-5">
-    <div
-      class="
-        row
-        gx-4 gx-lg-5
-        row-cols-2 row-cols-md-3 row-cols-xl-4
-        justify-content-center
-      "
-    >
-      <app-product-item
-        *ngFor="let productDoc of productsDocs"
-        [productDoc]="productDoc"
-      ></app-product-item>
-    </div>
-  </div>
-</section>
+</div>
