--- a/src/app/core/product/product-page/product-page.component.html
+++ b/src/app/core/product/product-page/product-page.component.html
@@ -1,40 +1,55 @@
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5 overflow-hidden mh-100">
-        <div class="row gx-4 gx-lg-5 align-items-center">
-            <div class="col-md-6">
-                <img class="card-img-top mb-5 mb-md-0" [src]="productData?.imageURL" />
-            </div>
-            <div class="col-md-6">
-                <h1 class="display-5 fw-bolder">{{productData?.displayName}}</h1>
-                <div class="fs-5 mb-2">{{brandData?.displayName}}</div>
-                <div class="d-flex mb-2">
-                    <div *ngFor="let fill of fullStars" class="text-warning bi bi-star-fill"></div>
-                    <div *ngFor="let fill of halfStars" class="text-warning bi bi-star-half"></div>
-                    <div *ngFor="let fill of noStars" class="text-warning bi bi-star"></div>
-                    <p class="ps-2">({{rating}})</p>
-                </div>
-                <p class="lead" style="max-height: 250px; overflow-y: hidden;">{{productData?.description}}</p>
-                <div class="d-flex justify-content-between">
-                    <div class="card-footer">
-                        <p class="m-0">THC: {{productData?.thc}} | CBD: {{productData?.cbd}}</p>
-                        <p class="m-0">{{productData?.cannabisType}}</p>
-                        <p class="m-0">{{productRatings?.length}} Ratings</p>
-                    </div>
-                    <div>
-                        <app-rating-checkin [productId]="productId"></app-rating-checkin>
-                    </div>
-                </div>
-            </div>
+  <div class="container px-4 px-lg-5 my-5 overflow-hidden mh-100">
+    <div class="row gx-4 gx-lg-5 align-items-center">
+      <div class="col-md-6">
+        <img class="card-img-top mb-5 mb-md-0" [src]="productData?.imageURL" />
+      </div>
+      <div class="col-md-6">
+        <h1 class="display-5 fw-bolder">{{ productData?.displayName }}</h1>
+        <div class="fs-5 mb-2">{{ brandData?.displayName }}</div>
+        <div class="d-flex mb-2">
+          <div
+            *ngFor="let fill of fullStars"
+            class="text-warning bi bi-star-fill"
+          ></div>
+          <div
+            *ngFor="let fill of halfStars"
+            class="text-warning bi bi-star-half"
+          ></div>
+          <div
+            *ngFor="let fill of noStars"
+            class="text-warning bi bi-star"
+          ></div>
+          <p class="ps-2">({{ rating }})</p>
         </div>
-    </div>
-</section>
-<section class="py-5 bg-light">
-    <div class="container px-4 px-lg-5 mt-5">
-        <h2 class="fw-bolder mb-4">Related products</h2>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5">
-                <app-activity-item *ngFor="let ratingDoc of productRatings" [ratingDoc]="ratingDoc"></app-activity-item>
-            </div>
+        <p class="lead" style="max-height: 250px; overflow-y: hidden">
+          {{ productData?.description }}
+        </p>
+        <div class="d-flex justify-content-between">
+          <div class="card-footer">
+            <p class="m-0">
+              THC: {{ productData?.thc }} | CBD: {{ productData?.cbd }}
+            </p>
+            <p class="m-0">{{ productData?.cannabisType }}</p>
+            <p class="m-0">{{ productRatings?.length }} Ratings</p>
+          </div>
+          <div>
+            <app-rating-checkin [productId]="productId"></app-rating-checkin>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
+<div class="container">
+  <h1 class="fw-bolder mb-4 border-bottom border-2">Global Recent Activity</h1>
+
+  <div class="row">
+    <div
+      *ngFor="let ratingDoc of productRatings"
+      class="col-lg-3 col-md-4 col-sm-6 mb-4"
+    >
+      <app-activity-item [ratingDoc]="ratingDoc"></app-activity-item>
+    </div>
+  </div>
+</div>
