--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -11,6 +11,8 @@
                 formControlName="username"
                 type="text"
                 class="form-control"
+                id="username"
+                placeholder="username"
                 required
               />
               <label for="username">User Name</label>
@@ -28,9 +30,11 @@
                 formControlName="email"
                 type="email"
                 class="form-control"
+                id="email"
+                placeholder="name@example.com"
                 required
               />
-              <label for="email">Email address</label>
+              <label for="email">Email Address</label>
             </div>
             <div
               *ngIf="email.invalid && email.dirty"
@@ -42,10 +46,12 @@
 
             <div class="form-floating mb-3">
               <input
-                formControlName="password"
-                type="password"
-                class="form-control"
-                required
+              formControlName="password"
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="password"
+              required
               />
               <label for="password">Password</label>
               <div
@@ -59,10 +65,12 @@
             </div>
             <div class="form-floating mb-3">
               <input
-                formControlName="confirmPassword"
-                type="password"
-                class="form-control"
-                required
+              formControlName="confirmPassword"
+              type="confirmPassword"
+              class="form-control"
+              id="confirmPassword"
+              placeholder="confirmPassword"
+              required
               />
               <label for="confirmPassword">Confirm Password</label>
               <div
