--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,50 +1,46 @@
 <ng-container *ngIf="authService.userState">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="#!">Puffed</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link link-secondary" aria-current="page" href="/home"
+        >Home</a
       >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/activity">Activity</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/products">Products</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              id="navbarDropdown"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-              >Create</a
-            >
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="/createproduct"
-                  >Create Product</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-      <button class="d-flex btn btn-light" type="submit" (click)="authService.logout()">Logout</button>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-dark" href="/activity">Activity</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link link-dark" href="/products">Products</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a
+        class="nav-link dropdown-toggle link-dark"
+        id="navbarDropdown"
+        href="#"
+        role="button"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+        >Create</a
+      >
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li>
+          <a class="dropdown-item" href="/createproduct">Create Product</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
+  <header class="pb-3 border-bottom">
+    <div class="container d-flex d-flex justify-content-between">
+      <span class="d-flex align-self-center fs-4">Puffed</span>
+      <form class="mx-5 d-flex flex-fill align-self-center">
+        <input
+          type="search"
+          class="form-control"
+          placeholder="Search..."
+          aria-label="Search"
+        />
+      </form>
+      <i (click)="authService.logout()" class="d-flex align-self-center bi bi-person-circle fs-4"></i>
     </div>
-  </nav>
+  </header>
 </ng-container>
