feat: :sparkles: Brand Page

--- a/src/app/core/activity/activity-item/activity-item.component.html
+++ b/src/app/core/activity/activity-item/activity-item.component.html
@@ -16,7 +16,7 @@
           by
           <a
             class="link-dark text-decoration-none"
-            [routerLink]="['/product', ratingData.productId]"
+            [routerLink]="['/brand', productData?.brandId]"
             >{{ brandData?.displayName }}</a
           >
         </p>
