--- a/src/app/core/activity/activity-item/activity-item.component.html
+++ b/src/app/core/activity/activity-item/activity-item.component.html
@@ -43,8 +43,8 @@
     <div class="text-center">
       <a
         class="btn btn-outline-dark mt-auto"
-        [routerLink]="['/product', ratingData.productId]"
-        >View product</a
+        [routerLink]="['/rating', ratingId]"
+        >View Rating</a
       >
     </div>
   </div>
